--- a/dashboard_app.ipynb
+++ b/dashboard_app.ipynb
@@ -112,15 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "extra1 = np.linspace(1,0, len(lsoas))\n",
-    "extra2 = np.linspace(2,0, len(lsoas))\n",
-    "extra3 = np.linspace(3,0, len(lsoas))\n",
+    "extra1 = np.linspace(0,len(lsoas), len(lsoas))\n",
+    "extra2 = np.linspace(0,10, len(lsoas))\n",
+    "extra3 = np.linspace(0,0, len(lsoas))\n",
     "\n",
     "lsoas['value1'] = extra1\n",
     "lsoas['value2'] = extra2\n",
@@ -129,24 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'geopandas.geodataframe.GeoDataFrame'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(lsoas))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +147,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1612c6780>"
+       "<IPython.lib.display.IFrame at 0x16b1abdd0>"
       ]
      },
      "metadata": {},
@@ -181,12 +164,25 @@
     "import plotly.express as px\n",
     "import dash_ag_grid as dag\n",
     "\n",
+    "###additional formatting of the app\n",
+    "colors = {\n",
+    "    'background': '#111111',\n",
+    "    'text': '#7FDBFF'\n",
+    "}\n",
+    "\n",
     "# Initialize the app\n",
     "app = Dash(__name__)\n",
+    "app.title = \"Regional Generation Optimisation\"\n",
     "\n",
     "# App layout\n",
     "app.layout = html.Div([\n",
-    "    html.Div(children='UK Energy Generation Optimisation'),\n",
+    "    html.Div(style={'backgroundColor': colors['background']}),\n",
+    "    html.H1(\n",
+    "        children='Regional Generation Optimisation',\n",
+    "        style={\n",
+    "            'textAlign': 'center',\n",
+    "            'color': colors['text']\n",
+    "        }),\n",
     "    html.Hr(),\n",
     "    dcc.Dropdown(options=['value1', 'value2', 'value3'], value='value1', id='column-options'),\n",
     "    dcc.Graph(id='graph1')\n",
