clean up folders

--- a/datacleaning.ipynb
+++ b/datacleaning.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# File path\n",
-    "file_path_electricity = './LSOA_domestic_elec_2010-22.xlsx'\n",
-    "file_path_gas = './LSOA_domestic_gas_2010-2022.xlsx'\n",
+    "file_path_electricity = 'data/LSOA_domestic_elec_2010-22.xlsx'\n",
+    "file_path_gas = 'data/LSOA_domestic_gas_2010-2022.xlsx'\n",
     "\n",
     "# Load the specific sheet and skip unnecessary rows\n",
     "data_elec_2022 = pd.read_excel(file_path_electricity, sheet_name='2022', skiprows=4)\n",
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
     "import pandas as pd\n",
     "\n",
     "# File path\n",
-    "file_path = './gdf_export.xlsx'  # Adjust the path if the file is not in the current directory\n",
+    "file_path = 'data/gdf_export.xlsx'  # Adjust the path if the file is not in the current directory\n",
     "\n",
     "# Read the Excel file into a DataFrame\n",
     "lsoa = pd.read_excel(file_path)\n",
